Hell-173 fixes overlap in tables on <425px width screens

--- a/src/app/components/account/account.component.scss
+++ b/src/app/components/account/account.component.scss
@@ -229,3 +229,18 @@ $hellenicblue: rgb(0, 140, 255);
         }
     }
 }
+
+@media screen and (max-width: 425px) {
+    .account-container {
+        width: 90%!important;
+    }
+    .order-history {
+        padding: 10px!important;
+    }
+    .address-book {
+        padding: 10px!important;
+    }
+    .order-history-table {
+        font-size: 7px!important;
+    }
+}
